@@ -15,6 +15,10 @@ chronological order (most recent first)
 
 Version 1.8.5 patchlevel 5                                 ??? ??, 2013
 
+Fixes:
+ * Commands which take multiple right-hand-side arguments could only have
+   8191-length arguments, instead of the usual 8192. Reported by Jules. [MG]
+
 Minor changes:
  * strreplace() now works harder to keep existing ANSI intact, when you
    replace an un-ansi'd string into an ansi'd one. [MG]
